# matchmaker

./: .gitignore  CHANGELOG.md  Cargo.toml  HELLO.md  TODO.md  install.sh
.github/workflows/: build-release.yml
matchmaker-cli/: Cargo.toml  README.md
matchmaker-cli/assets/: config.toml  dev.toml  override.toml  rg.toml
matchmaker-cli/assets/completions/: _mm  _mm.ps1  mm.bash  mm.fish
matchmaker-cli/assets/docs/: binds.md  format.md  options.md  other.md  template.md
matchmaker-cli/src/: action.rs  clap.rs  config.rs  formatter.rs  main.rs  parse.rs  paths.rs  start.rs  utils.rs
matchmaker-lib/: ARCHITECTURE.md  Cargo.toml
matchmaker-lib/src/: action.rs  binds.rs  config.rs  config_types.rs  event.rs  matchmaker.rs  message.rs  tui.rs
matchmaker-lib/src/nucleo/: injector.rs  query.rs  variants.rs  worker.rs
matchmaker-lib/src/preview/: mod.rs  previewer.rs  view.rs
matchmaker-lib/src/render/: mod.rs  state.rs
matchmaker-lib/src/ui/: display.rs  input.rs  mod.rs  preview.rs  results.rs
matchmaker-lib/src/utils/: percentage.rs  serde.rs  string.rs  text.rs  types.rs
matchmaker-partial/: Cargo.toml  README.md
matchmaker-partial-macros/: Cargo.toml
matchmaker-partial-macros/src/: lib.rs
matchmaker-partial/src/: simple_de.rs
matchmaker-partial/tests/: map_test.rs
