[package]
    name        = "matchmaker-cli"
    version     = "0.0.10"
    edition     = "2024"
    description = "Command-line interface for the matchmaker fuzzy finder"
    repository  = "https://github.com/Squirreljetpack/matchmaker"
    license     = "MIT"
    categories  = [ "command-line-utilities" ]
    keywords    = [ "fuzzy", "finder", "tui", "nucleo", "fzf" ]

[dependencies]
    cli_boilerplate_automation = { workspace = true, features = [ "serde", "bring" ] }
    matchmaker-lib             = { workspace = true, features = [ "partial" ] }
    matchmaker-partial         = { workspace = true }
    matchmaker-partial-macros  = { workspace = true }

    atty        = "0.2.14"
    ansi-to-tui = "8.0.0"
    anyhow      = "1.0"
    tokio       = { version = "1", features = [ "full" ] }
    log         = "0.4"
    env_logger  = "0.11.8"
    dirs        = "6.0.0"
    crokey      = "1.3.0"
    clap        = { version = "4.5.51", features = [ "derive" ] }
    serde       = "1.0"
    toml        = "0.9.8"
    thiserror   = "2.0"
    termimad    = "0.34.1"

[build-dependencies]
    clap          = { version = "4.0", features = [ "derive" ] }
    clap_complete = "4.5"
    strum         = { version = "0.27.2", features = [ "strum_macros" ] }
    strum_macros  = "0.27.2"
    thiserror     = "2.0.17"

[[bin]]
    name = "mm"
    path = "src/main.rs"

[lints]
    workspace = true

[features]
experimental = ["matchmaker-lib/experimental"]
