[package]
    name        = "matchmaker-lib"
    version     = "0.0.13"
    edition     = "2024"
    license     = "MIT"
    repository  = "https://github.com/Squirreljetpack/matchmaker"
    description = "A fuzzy finder for the terminal, powered by nucleo"
    categories  = [ "command-line-utilities", "rust-patterns" ]
    keywords    = [ "fuzzy", "finder", "tui", "nucleo", "fzf" ]

[dependencies]
    cli_boilerplate_automation = { version = "0", features = [ "serde", "bring" ] }
    matchmaker-partial         = { workspace = true, optional = true }
    matchmaker-partial-macros  = { workspace = true, default-features = false }

    ansi-to-tui = "8.0.0"
    ratatui     = { version = "0.30", features = [ "serde" ] }

    unicode-segmentation = "1.12.0"
    unicode-width        = "^0.2.0"

    anyhow          = "1.0.100"
    arc-swap        = "1.7.1"
    arrayvec        = "0.7.6"
    atty            = "0.2.14"
    bitflags        = "2.11"
    bitflags-derive = "0.0.4"
    boxcar          = "0.2.14"
    crokey          = "1.3.0"
    crossterm       = { version = "0.29.0", features = [ "event-stream", "serde", "use-dev-tty" ] }
    easy-ext        = "1.0.2"
    env_logger      = "0.11.8"
    futures         = "0.3"
    indexmap        = { version = "2.12.0" }
    log             = "0.4"
    mio             = "1.1.1"
    # nix = { version = "0.30.1", features = ["term"] }
    nucleo = "0.5.0"
    paste  = "1.0.15"
    phf    = { version = "0.13.1", features = [ "macros", "phf_macros" ] }
    # rayon = "1.11.0"
    regex        = "1.12.2"
    rustc-hash   = "2.1.1"
    serde        = { version = "1.0", features = [ "derive" ] }
    strum        = "0.27.2"
    strum_macros = "0.27.2"
    thiserror    = "2.0.17"
    tokio        = { version = "1.48.0", features = [ "full" ] }
    toml         = "0.9.8"

[target.'cfg(unix)'.dependencies]
    nix = { version = "0.31.1", features = [ "poll" ] }

[target.'cfg(windows)'.dependencies]
    windows-sys = "0.61.2"

[features]
    default         = [  ]
    bracketed-paste = [ "crossterm/bracketed-paste" ]
    parallelism     = [  ]
    experimental    = [  ]
    partial         = [ "matchmaker-partial", "matchmaker-partial-macros/partial" ]

[lib]
    name = "matchmaker"
    path = "src/lib.rs"

[[example]]
    name = "basic"
    path = "examples/basic.rs"

[[example]]
    name = "noninteractive"
    path = "examples/noninteractive.rs"

[[example]]
    name = "pick_1"
    path = "examples/pick_1.rs"

[[example]]
    name = "ripgrep"
    path = "examples/ripgrep.rs"


[lints]
    workspace = true
