[package]
    name        = "matchmaker-partial-macros"
    version     = "0.0.10"
    edition     = "2024"
    description = "Derive macros for the matchmaker-partial crate"
    repository  = "https://github.com/Squirreljetpack/matchmaker"
    license     = "MIT"

[features]
    default = [ "partial" ]
    partial = [  ]

[lib]
    proc-macro = true

[dependencies]
    proc-macro2 = "1.0.106"
    quote       = "1.0.44"
    syn         = { version = "2.0.115", features = [ "full" ] }

[lints]
    workspace = true
